fixed youtube video wrapping

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -96,3 +96,10 @@ body {
   color: var(--foreground);
   font-family: 'Outfit', sans-serif;
 }
+
+lite-youtube {
+  width: 100% !important;
+  max-width: 100% !important;
+  aspect-ratio: 16 / 9;
+  height: auto !important;
+}
